--- a/firebase.json
+++ b/firebase.json
@@ -6,6 +6,12 @@
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
+    ],
+    "rewrites": [ 
+      {
+      "source": "/verificadorDeAcesso",
+      "function": "verificadorDeAcesso"
+      } 
     ]
   },
   "emulators": {
