--- a/firebase.json
+++ b/firebase.json
@@ -7,11 +7,11 @@
       "**/.*",
       "**/node_modules/**"
     ],
-    "rewrites": [ 
+    "rewrites": [
       {
-      "source": "/verificadorDeAcesso",
-      "function": "verificadorDeAcesso"
-      }, 
+        "source": "/verificadorDeAcesso",
+        "function": "verificadorDeAcesso"
+      },
       {
         "source": "/helloWorld",
         "function": "helloWorld"
@@ -36,6 +36,9 @@
     },
     "ui": {
       "enabled": true
+    },
+    "pubsub": {
+      "port": 8085
     }
   }
 }
