lançei online no endereço do site

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,6 @@
 {
   "projects": {
-    "default": "guresende"
+    "sistemaescolar": "sistemaescolar13",
+    "default": "sistemaescolar13"
   }
 }
