--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,6 @@ node_modules/
 
 # dotenv environment variables file
 .env
+localdatabase/auth_export/accounts.json
+localdatabase/database_export/sistemaescolar13-default-rtdb.json
+localdatabase/firebase-export-metadata.json
