--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,6 @@ node_modules/
 localdatabase/auth_export/accounts.json
 localdatabase/database_export/sistemaescolar13-default-rtdb.json
 localdatabase/firebase-export-metadata.json
+localdatabase/firebase-export-metadata.json
+localdatabase/auth_export/accounts.json
+localdatabase/database_export/sistemaescolar13-default-rtdb.json
