--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,4 @@ localdatabase/firebase-export-metadata.json
 localdatabase/firebase-export-metadata.json
 localdatabase/auth_export/accounts.json
 localdatabase/database_export/sistemaescolar13-default-rtdb.json
+localdatabase/auth_export/accounts.json
