configurando para acesso no novo endereço do projetoX

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,6 +1,6 @@
 {
   "projects": {
-    "sistemaescolar": "sistemaescolar13",
-    "default": "sistemaescolar13"
+    "escola": "projetoxagencia",
+    "default": "projetoxagencia"
   }
 }
