--- a/functions/package.json
+++ b/functions/package.json
@@ -14,7 +14,9 @@
   "main": "index.js",
   "dependencies": {
     "firebase-admin": "^9.2.0",
-    "firebase-functions": "^3.15.5"
+    "firebase-functions": "^3.15.5",
+    "qrcode": "^1.4.4",
+    "steplix-emv-qrcps": "0.0.8"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.2.0"
