--- a/.firebaserc
+++ b/.firebaserc
@@ -1,6 +1,8 @@
 {
   "projects": {
-    "default": "learnupschool"
+    "learnup": "learnupschool",
+    "escola": "projetoxagencia",
+    "default": "projetoxagencia"
   },
   "targets": {}
 }
